--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI="mongodb+srv://ssriramcse23:erPvvrrAYt7oFhx5@cluster0.exq9sv3.mongodb.net/CollegeDb?appName=Cluster0"
+MONGO_URI=mongodb+srv://ssriramcse23:erPvvrrAYt7oFhx5@cluster0.exq9sv3.mongodb.net/EduManage?retryWrites=true&w=majority&appName=Cluster0
