--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI="mongodb+srv://ssriramcse23:erPvvrrAYt7oFhx5@cluster0.exq9sv3.mongodb.net/?appName=Cluster0"
+MONGO_URI="mongodb+srv://ssriramcse23:erPvvrrAYt7oFhx5@cluster0.exq9sv3.mongodb.net/test?retryWrites=true&w=majority"
