--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,15 +1,6 @@
-{
-  "version": 2,
-  "builds": [
-    {
-      "src": "Backend/server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "Backend/server.js"
-    }
-  ]
-}
+"builds": [
+  { "src": "Backend/server.js", "use": "@vercel/node" }
+],
+"routes": [
+  { "src": "/(.*)", "dest": "Backend/server.js" }
+]
