--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,6 +1,6 @@
 "builds": [
-  { "src": "Backend/server.js", "use": "@vercel/node" }
+  { "src": "Backend/index.js", "use": "@vercel/node" }
 ],
 "routes": [
-  { "src": "/(.*)", "dest": "Backend/server.js" }
+  { "src": "/(.*)", "dest": "Backend/index.js" }
 ]
