--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,2 @@
 MONGO_URI="mongodb+srv://ssriramcse23:erPvvrrAYt7oFhx5@cluster0.exq9sv3.mongodb.net/test?retryWrites=true&w=majority"
+FRONTEND_URL=https://edumanage-1801.vercel.app
