--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,6 +1,15 @@
-"builds": [
-  { "src": "Backend/index.js", "use": "@vercel/node" }
-],
-"routes": [
-  { "src": "/(.*)", "dest": "Backend/index.js" }
-]
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "backend/api/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/backend/api/index.js"
+    }
+  ]
+}
